# avnie

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  Makefile  README.md  cli.spec  pyproject.toml
.github/workflows/: formatting.yml  linting.yml  nightly.yml  release.yml  tests.yml  unit-tests.yml
assets/video_demo/: interactive.mov
avni/: cli.py  main.py
avnie/: __init__.py  cli.py  interactive.py  main.py  pyinstaller.py
avnie/_pyinstaller/: hook-avro.py
tests/: test_main.py
