# SPDX-License-Identifier: MIT

[tool.ruff]
target-version = "py38"
line-length = 110
exclude = ["venv"]

[tool.poetry]
name = "avnie"
version = "2024.8.7"
description = "A fast & user-friendly command-line interface (CLI) for avro.py."
authors = ["HitBlast <hitblastlive@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "avnie"}]
homepage = "https://pypi.org/project/avnie"
repository = "https://github.com/hitblast/avnie"
keywords = [
    'python',
    'phonetics',
    'avro',
    'avro phonetic',
    'bangla',
    'bengali',
    'bengali phonetics',
    'transliteration',
    'command-line',
    'cli',
    'command-line interface',
    'avnie',
    'avnie-cli',
    'avro.py-cli'
]

[tool.poetry.scripts]
avnie = "avnie.cli:run"
avro = "avnie.cli:run"

[tool.poetry.dependencies]
python = ">=3.8,<3.13"
avro-py = "^2024.7.13"
typer = "^0.12.3"
requests = "^2.32.3"
pyclip = "^0.7.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.5"
pytest = "^8.3.2"
pytest-mock = "^3.14.0"
pyinstaller = "^6.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
