# SPDX-License-Identifier: MIT

[tool.ruff]
target-version = "py39"
line-length = 110
exclude = ["venv"]

[tool.poetry]
name = "avnie"
version = "2024.10.12"
description = "A fast & user-friendly command-line interface (CLI) for avro.py."
authors = ["HitBlast <hitblastlive@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "avnie"}]
homepage = "https://pypi.org/project/avnie"
repository = "https://github.com/hitblast/avnie"
keywords = [
    'python',
    'phonetics',
    'avro',
    'avro phonetic',
    'bangla',
    'bengali',
    'bengali phonetics',
    'transliteration',
    'command-line',
    'cli',
    'command-line interface',
    'avnie',
    'avnie-cli',
    'avro.py-cli'
]

[tool.poetry.scripts]
avnie = "avnie.main:run"
avro = "avnie.main:run"

[tool.poetry.dependencies]
python = "^3.9"
avro-py = "^2024.7.13"
requests = "^2.32.3"
pyclip = "^0.7.0"
click = "^8.1.7"
rich = "^13.7.1"

[tool.poetry.group.dev.dependencies]
nuitka = "^2.4.5"
ruff = ">=0.5.5,<0.7.0"
pytest = "^8.3.2"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
